# ChangeLog for net-im/kadu-osd_hints
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
  +kadu-osd_hints-0.1.2.ebuild:
  Bumped.

  12 Nov 2008; Michał Ziąbkowski <mziab@o2.pl> +kadu-osd_hints-0.1.ebuild:
  New ebuild.
