@@ -1,6 +1,5 @@
-DIST kadu-0.6.5.tar.bz2 1312474 RMD160 26a80cb7b0c7dbc8c2c38ae9b8aa6609eb0fd8ad SHA1 9cacbec423c192f6482d9d67a163350191f5bfe2 SHA256 09f17f4b23a3ea8590135ff4a050b52565f3a364bfe4d986079c5be0bba83fdb
+DIST kadu-0.6.5.1.tar.bz2 1341099 RMD160 3c1a8a770d0701e019b5ed68658d20ea6f789e45 SHA1 1257b37c30d9682d4fd350b78d983de04b970872 SHA256 e2df2e1d7c1fa9a5d931a35efeb936088c42ef4b5d42fef8dddadc40f87397e2
 DIST kadu-osd_hints-0.1.2.tar.bz2 159051 RMD160 c932ac09bbc1698c960994ef556d876734ce5207 SHA1 ed3ea2d18c5be82857236b93e1774fe70e343f4a SHA256 5bb72fab2135363a7c9211a2e884a15ba33dda9fbe2e1efe4a3efdc88e79ffc8
-DIST kadu-osd_hints-0.1.tar.bz2 158871 RMD160 3f9785ba3ff8547a4d18eb590aef5a628261b879 SHA1 e1114cd7b9ad2e398182a1660b34262891570265 SHA256 bb5f6fc5bbe442aab96090bf4e7c7d67725047e2ec25ff710526f1f44757b767
-EBUILD kadu-osd_hints-0.1.2.ebuild 292 RMD160 684b649f07a7201d3d436de43dec3ef52d78c981 SHA1 20c7262f149a1eee10572c9dae4ef1ba36f5c0d9 SHA256 0656202d4143a642f6184313d98752fb9eb0987d2aa17995d66390493d80c954
-EBUILD kadu-osd_hints-0.1.ebuild 292 RMD160 684b649f07a7201d3d436de43dec3ef52d78c981 SHA1 20c7262f149a1eee10572c9dae4ef1ba36f5c0d9 SHA256 0656202d4143a642f6184313d98752fb9eb0987d2aa17995d66390493d80c954
-MISC ChangeLog 306 RMD160 2280d3dcd6f48893f072de17f77a1299c44680f5 SHA1 4b4ed2fba7566c3a1ff4695dfa1422717b43911b SHA256 5fe3635458ef91916a0c67ff3f8ac334a71031a5d81024aae3f2eb58c7ec4546
+EBUILD kadu-osd_hints-0.1.2.ebuild 387 RMD160 c6b24b6e4e34e3be1ffc72e5396a73542156d0b7 SHA1 e963eb593ade470bcc55987b7c8670ee413304a7 SHA256 ff8cb5c155424798589c80d21ae30a4de0210539198adddebaba84cb9c62763e
+MISC ChangeLog 452 RMD160 5a318dc9d9f2a593754dfdc2f217bc089d2d252c SHA1 3a1d57733e8c9a4aaaf859d85fb70f30af718540 SHA256 2054dd7da540f80e80f0efd7230c9f8b7905196f9a7dbd6a8f38526c6e3a24f0
+MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
