@@ -1,6 +1,10 @@
 # ChangeLog for net-im/kadu-osd_hints
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  25 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> -kadu-osd_hints-0.1.ebuild,
+  kadu-osd_hints-0.1.2.ebuild, +metadata.xml:
+  Some repoman fixes.
 
   08 Dec 2008; Michał Ziąbkowski <mziab@o2.pl>
   +kadu-osd_hints-0.1.2.ebuild:
